username/passwordを~/.m2/settings.xmlを使うように修正

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
         <configuration>
           <unpackVersion>${gae.version}</unpackVersion>
           <sdkDir>${appEngineSdk}</sdkDir>
+          <serverId>appengine.google.com</serverId>
         </configuration>
       </plugin>
     </plugins>
