--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+    <repository>
+       <id>sonatype</id>
+       <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+       <snapshots><enabled>true</enabled></snapshots>
+       <releases><enabled>false</enabled></releases>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -53,6 +62,17 @@
       <version>1.0.0.GA</version>
       <classifier>sources</classifier>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gwt-dnd</groupId>
+      <artifactId>gwt-dnd</artifactId>
+      <version>2.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.gwtbootstrap</groupId>
+      <artifactId>gwt-bootstrap</artifactId>
+      <version>2.2.1.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
