--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
       <plugin>
         <groupId>org.jasig.maven</groupId>
         <artifactId>sass-maven-plugin</artifactId>
-        <version>1.0.2</version>
+        <version>1.1.0</version>
         <executions>
           <execution>
             <phase>process-sources</phase>
@@ -143,6 +143,20 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <resources>
+            <resource>
+              <source>
+                <directory>src/main/webapp/scss</directory>
+                <includes>
+                  <include>*.scss</include>
+                </includes>
+              </source>
+              <destination>${project.build.directory}/${project.build.finalName}/css</destination>
+            </resource>
+          </resources>
+          <useCompass>true</useCompass>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
